[package]
name = "step_test"
version = "0.1.0"
edition = "2021"

[dependencies]
solana_rbpf = { path = "../" }
test_utils = { path = "../test_utils" }
thiserror = "1.0"
byteorder = "1.4" 
libc = "0.2"
shellexpand = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
itertools = "0.10"